ADD_SUBDIRECTORY(eapauth)

SET(SRC_LIST main.cpp)
list(APPEND CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
FIND_PATH(
    LIBEAPAUTH_DIR
    eapauth.h
    ${CMAKE_SOURCE_DIR}/src/eapauth/
)
MESSAGE(STATUS "${CMAKE_SOURCE_DIR} ${LIBEAPAUTH_DIR}")
INCLUDE_DIRECTORIES(${LIBEAPAUTH_DIR})
ADD_EXECUTABLE(sysuh3c ${SRC_LIST})
TARGET_LINK_LIBRARIES(sysuh3c eapauth)

#FIND_PACKAGE(libiconv)

IF(LIBICONV_INCLUDE_DIR AND LIBICONV_LIBRARY)
    MESSAGE(STATUS "Found iconv.h ${LIBICONV_INCLUDE_DIR}")
    INCLUDE_DIRECTORIES(${LIBICONV_INCLUDE_DIR})
    ADD_DEFINITIONS(-DWITH_SHOWMESSAGE)
    TARGET_LINK_LIBRARIES(sysuh3c ${LIBICONV_LIBRARY})
ENDIF(LIBICONV_INCLUDE_DIR AND LIBICONV_LIBRARY)
