AUX_SOURCE_DIRECTORY(. SRC_LIST)
list(APPEND CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")

FIND_PACKAGE(libiconv)

IF(LIBICONV_INCLUDE_DIR)
    MESSAGE(STATUS "Found iconv.h ${LIBICONV_INCLUDE_DIR}")
    INCLUDE_DIRECTORIES(${LIBICONV_INCLUDE_DIR})
    ADD_DEFINITIONS(-DWITH_SHOWMESSAGE)
ENDIF(LIBICONV_INCLUDE_DIR)

ADD_LIBRARY(eapauth STATIC ${SRC_LIST})

IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    MESSAGE(STATUS "Build for Apple Darwin")
    ADD_DEFINITIONS(-DSYSTEM_DARWIN)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")

IF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    MESSAGE(STATUS "Build for Linux")
    ADD_DEFINITIONS(-DSYSTEM_LINUX)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
